- text centered (from http://stackoverflow.com/questions/5703552/css-center-text-horizontal-and-vertical-inside-a-div-block) - fixed popup not loading values

--- a/style.css
+++ b/style.css
@@ -65,12 +65,19 @@ td
     height: 50px;
     padding: 0px;
     margin: 0px;
-    background-color: gray;
+    background-color: lightgray;
     background-repeat: no-repeat;
     background-size: contain;
     background-clip: border-box;
     background-position: center center;
     cursor: pointer;
+
+    border: 1px solid gray;
+    border-radius: 4px;
+
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
 }
 
 td .header
@@ -80,10 +87,17 @@ td .header
 
 td:hover
 {
-    background-color: lightgray;
+    background-color: gray;
 }
 
-td a { display: block; margin: 0px; padding: 0px; }
+td a
+{
+    display: block;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+}
 
 #editing_popup
 {
